test/cases/bad/bad060.lat
int main() {
     "abc" < "cde";
     return 0;
}